Applied patch #1185766 from Tobias